lab-scenarios/01-traffic-weight-split/manifests/01-traffic-weight-split/istio-ingressgateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
    app.kubernetes.io/name: istio-ingressgateway
    app.kubernetes.io/part-of: istio
spec:
  type: NodePort
  selector:
    app: istio-ingressgateway
    istio: ingressgateway
  ports:
    - name: http2
      port: 80
      targetPort: 8080
      nodePort: 30100
      protocol: TCP
    - name: https
      port: 443
      targetPort: 8443
      nodePort: 30443
      protocol: TCP
    - name: status-port
      port: 15021
      targetPort: 15021
      nodePort: 31021
      protocol: TCP
