lab-scenarios/01-traffic-weight-split/manifests/01-traffic-weight-split/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-traffic-sv
  namespace: dev-lab
spec:
  selector:
    app: dev-traffic-online
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
