lab-scenarios/01-traffic-weight-split/manifests/01-traffic-weight-split/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: dev-traffic-dr
  namespace: dev-lab
spec:
  host: dev-traffic-sv
  subsets:
    - name: v1
      labels:
        version: v1
